# c-sorts

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: evaluate.yml
include/algorithms/: AlgorithmRegistry.hpp  BubbleSort.hpp  CountingSort.hpp  HeapSort.hpp  InsertionSort.hpp  MergeSort.hpp  QuickSort.hpp  RadixSort.hpp  SelectionSort.hpp  ShellSort.hpp
include/core/: SortAlgorithm.hpp  SortResult.hpp  Timer.hpp
include/input/: InputParser.hpp
include/ui/: Menu.hpp  ResultPrinter.hpp
src/: main.cpp
